- add grid inflation for sonic boom grids
- renamed convert to ref_translate
- adaptation quality on partition boundaries improved
- mem leak in gridparallelswap addressed
- x3d html output
- little endian .lb8.ugrid import
- removed ruby-wrapped unit tests to fix fun3d makedistcheck
- removed dpw cruft
- renamed ref_projectable and ref_axisymmetric
- added ref_inflatable

Wed Sep 12, 2012 : Released Refine 1.8.8

- limit boundary coarsening that effects curved surface normal in refine/two
- two/ref_axi more general about node pair ordering
- can impy metric of pyramid and hex
- stitch grids with pairs of faces interior to the domain

Wed May 2, 2012 : Released Refine 1.8.7

- fortran interface to refine/two modified for FUN3D

Wed Apr 18, 2012 : Released Refine 1.8.6 (1.8.5 broken)

- two/axisymmetric can convert some 2D grids into axi-symmetric grids
    (with many caveats)
- use autoconf standard FC_FUNC and FC_FUNC_ macros to name mangle
    fortran interfaces
- use config.h to define FC_FUNC_ (for xlf and xlc)

Thu Feb 16, 2012 : Released Refine 1.8.4

- towards eliminating the creatation of "collapsed cells", tets with 
  more then one boundary face: do not collapse if either node is frozen 
  (80768c4). added a cost constraint for tets with more then one 
  boundary face (2566eb8,b24f9fd)
- two/ref_axi_test can convert some 2D grids into axi-symmetric grids
  (with many caveats)

Thu Nov 17, 2011 : Released Refine 1.8.3

- package cleanup and include bootstrap

Mon Nov 7, 2011 : Released Refine 1.8.2

- to allow bootstrap outside of git repo

Wed Oct 26, 2011 : Released Refine 1.8.1 

- removed unused code.
- MesherX has been moved to a subdirectory and is no longer distributed
- started refine/two
- removed doc from distribution to eliminate texi2doc dependency
- unit tests work with ruby 1.9.2 (added '.' to load path)

Mon Jul 18, 2011 : Released Refine 1.8.0 (requires >= FUN3D-52844 (11.x.x)).

- fortran bindings extended for load balancing (gridgetmap_, 