@@ -50,44 +50,3 @@ lib_LIBRARIES += libFAUXGeom.a
 
 libFAUXGeom_a_CFLAGS = @SDKheader@
 libFAUXGeom_a_SOURCES = FAKEGeom.h FAUXGeom.c FAKEGeomExtras.c
-
-bin_PROGRAMS =
-
-if BUILD_EXECUTABLES
-
-bin_PROGRAMS += refine-convert
-refine_convert_SOURCES = refine_convert.c
-refine_convert_LDADD = librefine.a libFAUXGeom.a -lm
-
-bin_PROGRAMS += refine-dsmc
-refine_dsmc_SOURCES = refine_dsmc.c
-refine_dsmc_LDADD = librefine.a libFAUXGeom.a -lm
-
-bin_PROGRAMS += refine-px
-refine_px_SOURCES = refine_px.c
-refine_px_LDADD = librefine.a libFAUXGeom.a -lm
-
-if BUILD_SDK_DEPENDENTS
-
-all_cflags = @SDKheader@
-refineLib  = librefine.a @SDKlibrary@ -lGoolache -lUGAPI -lCADGeom-CAPRI -lMeat
-all_ldflags = @dynamicFlag@
-
-LastLib = @Xlibrary@ -lX11 -lm @ARCHlibrary@
-
-bin_PROGRAMS += refine
-refine_CFLAGS = $(all_cflags)
-refine_SOURCES = refine_main.c
-refine_LDADD = $(refineLib) @CAPRIlibrary@ $(LastLib)
-refine_LDFLAGS = $(all_ldflags)
-
-bin_PROGRAMS += restartTest
-restartTest_CFLAGS = $(all_cflags)
-restartTest_SOURCES = restartTest.c
-restartTest_LDADD = @SDKlibrary@ -lCADGeom-CAPRI -lMeat \
-	 @CAPRIlibrary@ $(LastLib)
-restartTest_LDFLAGS = $(all_ldflags)
-
-endif # BUILD_SDK_DEPENDENTS
-
-endif # BUILD_EXECUTABLES
