@@ -12,6 +12,7 @@
 - removed dpw cruft
 - renamed ref_projectable and ref_axisymmetric
 - added ref_inflatable
+- removed old refine executables
 
 Wed Sep 12, 2012 : Released Refine 1.8.8
 
